syntax = "proto3";

option go_package = "./;proto";

package proto;

// 错误码
enum StatusCode{
  OK = 0;
  ERROR = 1;
}

// 错误信息
message ErrorMessage{
  StatusCode code = 1;
  string msg = 2;
}

// 用户相关
message UserInfoRequest{
  uint32 uid = 1; //用户id
}

// todo 拓展
message UserInfoResponse{
  ErrorMessage error = 1;
  uint32 uid = 2; //用户id
  bool hasCharacter = 3; //是否创建过角色
  string characterName = 4; //角色名
}

message UserLoginRequest{
  uint32 uid = 1; //用户id
  string password = 2; //密码
}

message UserLoginResponse{
  ErrorMessage error = 1;
  uint32 uid = 2; //用户id
}

message UserRegisterRequest{
  uint32 uid = 1; //用户id
  string password = 2; //密码
}

message UserRegisterResponse{
  ErrorMessage error = 1;
  uint32 uid = 2; //用户id
}

// 创建角色
message CreateCharacterRequest{
  uint32 uid = 1; //用户id
  string characterName = 2; //角色名
}

message CreateCharacterResponse{
  ErrorMessage error = 1;
  uint32 uid = 2; //用户id
}

// 聊天相关
message ChatRequest{
  uint32 uid = 1;
}

message StopChatRequest{
  uint32 uid = 1;
}

message ChatMessage{
  uint32 uid = 1;
  string  msg = 2;
}


// 好友相关
message SearchFriendRequest{
  uint32 searcherUid = 1;// 搜索人的uid
  uint32 targetUid = 2;// 被搜索人的uid
}

message SearchFriendResponse{
  ErrorMessage error = 1;
  uint32 searcherUid = 2;// 搜索人的uid
  uint32 targetUid = 3;// 被搜索人的uid
  string name = 4;// 被搜索人的名字
  bool  isFriend = 5;// 是否是好友
}

message AddFriendRequest{
  uint32 srcUid = 1;
  uint32 targetUid = 2;
}

message RemoveFriendRequest{
  uint32 srcUid = 1;
  uint32 targetUid = 2;
}

message FriendListRequest{
  uint32 uid = 1;
}

message FriendListResponse{
  ErrorMessage error = 1;
  uint32 uid = 2;
  repeated uint32 friendUidList = 3;
  repeated string friendNameList = 4;
}


// 商店相关

message GoodsMessage{
  uint32 id = 1; // 商品id
  string name = 2;// 商品名
}

message GoodsDescRequest{ // 请求商品描述
  uint32 goodsId = 1;
}

message GoodsDescResponse{ // 商品描述
  StatusCode code = 1;
  uint32 goodsId = 2;
  string desc = 3;
}





service GameService
{
  //用户相关
  rpc UserInfo(UserInfoRequest) returns (UserInfoResponse);
  rpc UserLogin(UserLoginRequest) returns (UserLoginResponse);
  rpc UserRegister(UserRegisterRequest) returns (UserRegisterResponse);
  rpc CreateCharacter(CreateCharacterRequest) returns (CreateCharacterResponse);

  // 聊天相关
  rpc PublicChat(ChatMessage) returns (ErrorMessage); // 公屏聊天
  rpc BubbleChat(ChatMessage) returns (ErrorMessage); // 气泡聊天
  rpc StartPublicChat(ChatRequest) returns (stream ChatMessage); // 公屏聊天
  rpc StartBubbleChat(ChatRequest) returns (stream ChatMessage); // 气泡聊天
  rpc StopPublicChat(StopChatRequest) returns (ErrorMessage); // 公屏聊天
  rpc StopBubbleChat(StopChatRequest) returns (ErrorMessage); // 气泡聊天

  // 好友相关
  rpc SearchFriend(SearchFriendRequest) returns (SearchFriendResponse);// 搜索好友
  rpc AddFriend(AddFriendRequest) returns (ErrorMessage);// 添加好友
  rpc FriendList(FriendListRequest) returns (FriendListResponse);// 好友列表
  rpc RemoveFriend(RemoveFriendRequest) returns (ErrorMessage);// 删除好友

  // TODO 客户端上传

  // TODO 双向通信
}